Update summary and jd for Nio

--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
     <hr>
 
     <h2>Summary</h2>
-    <p>Dedicated professional with over 5 years of experience in Business Operations management and analysis. Skilled in
-        supply and demand planning, vendor relationship management, logistics, team restructuring, and employee
-        performance
-        evaluation. Proficient in SQL, Python, Power BI, and advanced Excel.</p>
+    <p>Experienced professional with over 10 years in Procure-to-Pay (P2P) management, system integration, and process
+        optimization. Demonstrates expertise in supply and demand planning, vendor relationship management, and
+        logistics coordination. Adept at streamlining workflows through team restructuring and employee performance
+        evaluation. Technically proficient in SQL, Python, Power BI, and advanced Excel, with a proven ability to
+        leverage data-driven insights to enhance operational efficiency and support software development initiatives in
+        procurement and payment systems. Actively seeking opportunities in an SAP Technical Support Engineer role to
+        apply ERP expertise and drive system improvements.</p>
     <hr>
     <h2>Technology Skills</h2>
     <p>Programming: &nbsp;C#, Python, JavaScript, SQL<br>
@@ -29,21 +32,24 @@
         Other: &nbsp;Pycharm, Visual Studio, RStudio, Anaconda, Google Colab, and MS Offices</p>
     <hr>
     <h2>Professional Experience</h2>
-    <h4>NIO USA INC — Software Engineer| CA, USA Feb 2023 – Present</h4>
+    <h4>NIO USA INC — Software Engineer| CA, USA Feb : 2023 – Mar 2025</h4>
     <ul>
         <li>Conducted insightful analysis of the Procure-to-Pay process using internal data and derived insights
-            improving
-            on-time payments.</li>
+            improving on-time payments.</li>
         <li>Drive operational excellence by supporting cross-functional partners to ensure the smooth running of
-            business
-            rhythms.</li>
+            business rhythms.</li>
         <li>Designed analytical tools for Supply Chain and Accounting teams to trace Procure-to-Pay issues and business
             patterns.</li>
-        <li>Created and managed a data warehouse with Python and SQL server for team use in Procure-to-Pay data storage.
-        </li>
+        <li>Deployed C# Selenium automation to streamline Vendor Invoice Processing, reducing manual workload.</li>
+        <li>Established a robust ERP data warehouse using Python and SQL Server, providing a scalable data pipeline for
+            real-time procurement tracking, MRP analysis, and purchase order management.</li>
+        <li>Defined and documented business specifications to streamline the P2P process, ensuring consistency and
+            compliance with procurement policies.</li>
+        <li>Gathered enhancement requirements and facilitated deployment by collaborating with developers, conducting
+            SIT/UAT testing, preparing user guides, and leading end-user training for a seamless transition.</li>
     </ul>
 
-    <h4>VENTURESOFT GLOBAL (NIO PROJECT) — Application Support Engineer| CA, USA April 2022 – Feb 2023</h4>
+    <h4>VENTURESOFT GLOBAL (NIO PROJECT) — Application Support Engineer| CA, USA : April 2022 – Feb 2023</h4>
     <ul>
         <li>Led successful migration of procure-to-pay system from third-party ERP to NIO's internal app and SAP S4 HANA
             within four months, collaborating with global digital development, program management, and infrastructure
@@ -54,7 +60,7 @@
         <li>Developed test cases for new system releases and prepared training materials for new users.</li>
     </ul>
 
-    <h4>UNITED BRANDS INC — Business Operations Analyst | CA, USA Jul 2020 – Mar 2022</h4>
+    <h4>UNITED BRANDS INC — Business Operations Analyst | CA, USA : Jul 2020 – Mar 2022</h4>
     <ul>
         <li>Analyzing big data from ERP and online platforms to visualize improvement patterns related to sales,
             customer
@@ -76,7 +82,7 @@
             traceability system.</li>
     </ul>
 
-    <h4>STEM AWAY — NLP and Machine Learning Participant, Intern | CA, USA May 2020 – Aug 2020</h4>
+    <h4>STEM AWAY — NLP and Machine Learning Participant, Intern | CA, USA : May 2020 – Aug 2020</h4>
     <ul>
         <li>Scrapped HTML data from the “Mac Power Users” online forum, consisting of 602 Episodes and 6K+ active users,
             with
@@ -85,7 +91,7 @@
             before exporting to Excel CSV.</li>
     </ul>
 
-    <h4>SOHO DIVERSIFIED GROUP — Operations Manager | Cambodia Feb 2016 – Dec 2017</h4>
+    <h4>SOHO DIVERSIFIED GROUP — Operations Manager | Phnom Penh, Cambodia : Feb 2016 – Dec 2017</h4>
     <ul>
         <li>Set up a supply chain network with 13 Bonchon restaurants to scale business and operations at maximum
             capacity:
@@ -103,7 +109,7 @@
             arrangement.</li>
     </ul>
 
-    <h4>GOLDEN RICE — Export Sales Manager |Cambodia Jan 2013 – Feb 2016</h4>
+    <h4>GOLDEN RICE — Export Sales Manager | Phnom Penh, Cambodia : Jan 2013 – Feb 2016</h4>
     <ul>
         <li>Increased customer conversion rates from 5% to 10% in 2015 after aligned sales strategies and supply chain
             planning.</li>
@@ -116,7 +122,7 @@
             problem-solving.</li>
     </ul>
 
-    <h4>ACTIVE EVENT MANAGEMENT — Account Executive Officer |Cambodia Jun 2010 – Feb 2012</h4>
+    <h4>ACTIVE EVENT MANAGEMENT — Account Executive Officer | Phnom Penh, Cambodia : Jun 2010 – Feb 2012</h4>
     <ul>
         <li>Supervised six teams to execute a project for Beeline Telecom aiming to increase new signup accounts to the
             mobile
@@ -130,13 +136,13 @@
     </ul>
     <hr>
     <h2>Education</h2>
-    <h4>Master of Science in Business Analytics September 2019 – March 2020</h4>
+    <h4>Master of Science in Business Analytics : September 2019 – March 2020</h4>
     <p>HULT INTERNATIONAL BUSINESS SCHOOL— San Francisco, United States</p>
 
-    <h4>Master of Business Administration (MBA) September 2018 – August 2019</h4>
+    <h4>Master of Business Administration (MBA) : September 2018 – August 2019</h4>
     <p>HULT INTERNATIONAL BUSINESS SCHOOL— San Francisco, United States</p>
 
-    <h4>Bachelor of Business Administration October 2007 – August 2011</h4>
+    <h4>Bachelor of Business Administration : October 2007 – August 2011</h4>
     <p>NATIONAL UNIVERSITY OF MANAGEMENT — Phnom Penh, Cambodia
     <ul>
         <li>Full Scholarship Awarded by National Education Ministry</li>
