Update tech skills section

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
         apply ERP expertise and drive system improvements.</p>
     <hr>
     <h2>Technology Skills</h2>
-    <p>Programming: &nbsp;C#, Python, JavaScript, SQL<br>
+    <p>Programming: &nbsp;SQL, Python, C#, HTML, CSS, JavaScript, and Excel Formula<br>
         BI Tools: &nbsp;Power BI, Tableau, and Excel Charts<br>
-        Database: &nbsp;SQL Server, MySQL, MS Azure, QuickBooks, NetSuite (ERP Oracle), and SAP S4
-        HANA<br>
-        Other: &nbsp;Pycharm, Visual Studio, RStudio, Anaconda, Google Colab, and MS Offices</p>
+        ERP: &nbsp;SAP S4 HANA, QuickBooks, NetSuite (ERP Oracle), and Workflow<br>
+        Other: &nbsp;GitLab, Docker, Ubuntu, Rancher, Jenkins, Visual Studio Code, Visual Studio, PyCharm, Visual
+        Studio, RStudio, Anaconda, Google Colab, and MS Offices</p>
     <hr>
     <h2>Professional Experience</h2>
-    <h4>NIO USA INC — Software Engineer| CA, USA Feb : 2023 – Mar 2025</h4>
+    <h4>NIO USA INC — Software Engineer | CA, USA Feb : 2023 – Mar 2025</h4>
     <ul>
         <li>Conducted insightful analysis of the Procure-to-Pay process using internal data and derived insights
             improving on-time payments.</li>
@@ -49,7 +49,7 @@
             SIT/UAT testing, preparing user guides, and leading end-user training for a seamless transition.</li>
     </ul>
 
-    <h4>VENTURESOFT GLOBAL (NIO PROJECT) — Application Support Engineer| CA, USA : April 2022 – Feb 2023</h4>
+    <h4>VENTURESOFT GLOBAL (NIO PROJECT) — Application Support Engineer | CA, USA : April 2022 – Feb 2023</h4>
     <ul>
         <li>Led successful migration of procure-to-pay system from third-party ERP to NIO's internal app and SAP S4 HANA
             within four months, collaborating with global digital development, program management, and infrastructure
@@ -151,7 +151,7 @@
     <hr>
 
     <h2>Additional Information</h2>
-    <p>Work Authorization: &nbsp;Green Card Holder, valid until 05/19/2024<br>
+    <p>Work Authorization: &nbsp;<b>Green Card Holder</b>, valid until 05/19/2028<br>
         Volunteerism: &nbsp;Mentor for Khmer education at the Nagara Dhamma Temple to build a strong Cambodian US
         community<br>
         Language: &nbsp;English (fluent), Chinese Mandarin (fluent), Khmer (native)
