update home address and CV stracture

--- a/index.html
+++ b/index.html
@@ -8,31 +8,30 @@
 
 <body>
     <h1>Sunlong Ngouv</h1>
-    <img src="./assets/image/Sunlong.png" alt="photo of Sunlong" height="200px" width="150px" />
-    <p> San Mateo, CA | 415-548-3978 | sunlong.ngouv@gmail.com <br>
+    <img src="./assets/image/Sunlong.png" alt="Sunlong's Photo" height="200px" width="150px" />
+    <p> San Bruno, CA | 415-548-3978 | sunlong.ngouv@gmail.com <br>
         LinkedIn: www.linkedin.com/in/sunlong-ngouv <br>
         GitHub: www.github.com/SunlongNgouv <br>
     </p>
     <hr>
 
     <h2>Summary</h2>
-    <p>Experienced professional with over 10 years in Procure-to-Pay (P2P) management, system integration, and process
-        optimization. Demonstrates expertise in supply and demand planning, vendor relationship management, and
-        logistics coordination. Adept at streamlining workflows through team restructuring and employee performance
-        evaluation. Technically proficient in SQL, Python, Power BI, and advanced Excel, with a proven ability to
-        leverage data-driven insights to enhance operational efficiency and support software development initiatives in
-        procurement and payment systems. Actively seeking opportunities in an SAP Technical Support Engineer role to
-        apply ERP expertise and drive system improvements.</p>
+    <p>Dedicated professional with 10+ years of experience in ERP implementation, system integration, and process
+        optimization across Finance, Procurement, Supply Chain, and Operations. Proven success leading cross-functional
+        teams through ERP migrations, Procure-to-Pay (P2P) transformation, and data-driven decision-making enablement.
+        Skilled in aligning technology with business goals, driving adoption through change management, and delivering
+        measurable outcomes in compliance-driven environments. Technical proficiency in SQL, Python, Power BI, and
+        advanced Excel.</p>
     <hr>
     <h2>Technology Skills</h2>
-    <p>Programming: &nbsp;SQL, Python, C#, HTML, CSS, JavaScript, and Excel Formula<br>
+    <p>Programming: &nbsp;SQL, Python, C#, and Excel Formula<br>
         BI Tools: &nbsp;Power BI, Tableau, and Excel Charts<br>
-        ERP: &nbsp;SAP S4 HANA, QuickBooks, NetSuite (ERP Oracle), and Workflow<br>
+        ERP: &nbsp;SAP S4 HANA, QuickBooks, NetSuite (Oracle ERP), and Workflow (NIO ERP)<br>
         Other: &nbsp;GitLab, Docker, Ubuntu, Rancher, Jenkins, Visual Studio Code, Visual Studio, PyCharm, Visual
         Studio, RStudio, Anaconda, Google Colab, and MS Offices</p>
     <hr>
     <h2>Professional Experience</h2>
-    <h4>NIO USA INC — Software Engineer | CA, USA Feb : 2023 – Mar 2025</h4>
+    <h4>NIO USA INC — Application Support Engineer | CA, USA : Apr 2022 – Feb 2025</h4>
     <ul>
         <li>Conducted insightful analysis of the Procure-to-Pay process using internal data and derived insights
             improving on-time payments.</li>
@@ -47,39 +46,39 @@
             compliance with procurement policies.</li>
         <li>Gathered enhancement requirements and facilitated deployment by collaborating with developers, conducting
             SIT/UAT testing, preparing user guides, and leading end-user training for a seamless transition.</li>
-    </ul>
 
-    <h4>VENTURESOFT GLOBAL (NIO PROJECT) — Application Support Engineer | CA, USA : April 2022 – Feb 2023</h4>
-    <ul>
-        <li>Led successful migration of procure-to-pay system from third-party ERP to NIO's internal app and SAP S4 HANA
-            within four months, collaborating with global digital development, program management, and infrastructure
-            teams in
-            the US and China.</li>
+        <h5>— Application Support Engineer — Contractor through VentureSoft Global (Apr 2022 – Feb 2023)</h5>
+        <li>Led successful migration of procure-to-pay system from both Netsuite and Coupa to Workflow (an NIO
+            in-house ERP) and SAP S4 HANA within three months, collaborating among NIO's global digital development,
+            program
+            management, and infrastructure teams in the US and China.</li>
         <li>Conducted data identification, extraction, transformation, and storage from legacy systems, creating a
             user-friendly UI for end-users to access records.</li>
         <li>Developed test cases for new system releases and prepared training materials for new users.</li>
     </ul>
 
-    <h4>UNITED BRANDS INC — Business Operations Analyst | CA, USA : Jul 2020 – Mar 2022</h4>
+    <h4>UNITED BRANDS INC | CA, USA : Jul 2020 – Mar 2022</h4>
     <ul>
-        <li>Analyzing big data from ERP and online platforms to visualize improvement patterns related to sales,
-            customer
-            experience, and business operations to boost sales revenue and customer success along with facilitating
-            logistics
-            outbound operations processes to maintain high accuracy and efficiency.</li>
-        <li>Maintained and updated ETL system by deploying MySQL server to consolidate big data from various online
-            sales
-            platforms.</li>
-        <li>Analyzed sales and customer trends unveiling 33% of customers on average placing lower than 10 orders per
-            year and
-            12% were inactive. Food Titans was the worst.</li>
+        <h5>— Business Operations Analyst (Mar 2021 - Mar 2022)</h5>
+        <li>Analyzed and interpret sales data from Z-coffee (eBay), Food Titans (Amazon), and Whip-It! (Shopify)
+            platforms in tableau unveiling inactive customers and low-performing customers during the period.</li>
+        <li>Analyzed cost of goods and logistics to optimize gross profit and eliminate cost discrepancies.</li>
         <li>Analyzed materials and logistics costs and developed profit-maximizing strategies eliminating cost
             discrepancies.
         <li>Created Ad hoc reports via Tableau for immediate business decision-making assigned by the manager.</li>
-        <li>Resolved delivery claims and issues among customers, company, and logistics carriers for mutual agreements.
-        </li>
+        <li>Remodeled design and updated Mysql database by wrangling and consolidating data from eCommerce sales
+            platforms.</li>
+        <h5>— Logistics Associate (Aug 2020 - Mar 2021)</h5>
+        <li>Executed eCommerce daily orders from whip-it!.com, eBay Seller, and Amazon Central by entering order data
+            into Netsuite, processing pick lists and packing slips, and generating shipping labels from FedEx, UPS, and
+            USPS ship stations.</li>
+        <li>Managed daily workflow of outbound shipping with 3PLs, including shipping quotes, shipping documents, and
+            logistics coordination.</li>
+        <li>Resolved logistics claims and delivery issues among stakeholders for mutual agreements.</li>
+        <h5>— ICQA Lead (Jul 2020 - Aug 2020)</h5>
         <li>Improved inventory accuracy by designing warehouse floor plans, process flow charts, cycle counts, and a
             traceability system.</li>
+        <h5>— Inventory and Quality Assurance Associate (May 2020 - Jul 2020)</h5>
     </ul>
 
     <h4>STEM AWAY — NLP and Machine Learning Participant, Intern | CA, USA : May 2020 – Aug 2020</h4>
@@ -137,10 +136,10 @@
     <hr>
     <h2>Education</h2>
     <h4>Master of Science in Business Analytics : September 2019 – March 2020</h4>
-    <p>HULT INTERNATIONAL BUSINESS SCHOOL— San Francisco, United States</p>
+    <p>HULT INTERNATIONAL BUSINESS SCHOOL — San Francisco, United States</p>
 
     <h4>Master of Business Administration (MBA) : September 2018 – August 2019</h4>
-    <p>HULT INTERNATIONAL BUSINESS SCHOOL— San Francisco, United States</p>
+    <p>HULT INTERNATIONAL BUSINESS SCHOOL — San Francisco, United States</p>
 
     <h4>Bachelor of Business Administration : October 2007 – August 2011</h4>
     <p>NATIONAL UNIVERSITY OF MANAGEMENT — Phnom Penh, Cambodia
@@ -151,9 +150,9 @@
     <hr>
 
     <h2>Additional Information</h2>
-    <p>Work Authorization: &nbsp;<b>Green Card Holder</b>, valid until 05/19/2028<br>
+    <p>Work Authorization: &nbsp; a <b>Green Card Holder</b><br>
         Volunteerism: &nbsp;Mentor for Khmer education at the Nagara Dhamma Temple to build a strong Cambodian US
-        community<br>
+        community in 2019-2020<br>
         Language: &nbsp;English (fluent), Chinese Mandarin (fluent), Khmer (native)
     </p>
 
